--- a/sinddm/index.html
+++ b/sinddm/index.html
@@ -825,7 +825,7 @@
 			<tbody>
 			<tr>
 				<td style="font-size:14pt; text-align: left; padding-right: 40px !important;">
-					More results, comparison to other methods and further discussion about our model can be found in the <a href="" target="_blank" rel="noopener noreferrer">supplementary material</a>.<br>
+					More results, comparison to other methods and further discussion about our model can be found in the <a href="resources/sinddm_supp.pdf" target="_blank" rel="noopener noreferrer">supplementary material</a>.<br>
 					<!-- Our official code implementation can be found in the official SinDDM <a href="">github repository</a>. -->
 					Our official code implementation can be found in the official SinDDM github repository (coming soon).
 
@@ -838,7 +838,7 @@
 		<table class="table" width="1">
 			<tbody>
 			<tr>
-				<td><a target="_blank" rel="noopener noreferrer" href="" style="color:black !important;"><img alt="" id="supp" class="round" width="125" border="1px solid" style="margin-right:40px;" src="./resources/supp.png"/></a></td>
+				<td><a target="_blank" rel="noopener noreferrer" href="resources/sinddm_supp.pdf" style="color:black !important;"><img alt="" id="supp" class="round" width="125" border="1px solid" style="margin-right:40px;" src="./resources/supp.png"/></a></td>
 				<!-- <td><a href="" target="_blank" rel="noopener noreferrer"><img alt="" id="github_logo" class="round" width="125" src="./resources/github_logo.png"/></a></td> -->
 				<td><img alt="" id="github_logo" class="round" width="125" src="./resources/github_logo.png"/></td>
 
@@ -848,7 +848,7 @@
 		  <table class="table" width="1">
 			<tbody>
 			<tr>
-				<td width="170" style="font-size:14pt; text-align: center; padding-right: 40px !important;"><a href='' target="_blank" rel="noopener noreferrer">[Supplementary]</a></td>
+				<td width="170" style="font-size:14pt; text-align: center; padding-right: 40px !important;"><a href='resources/sinddm_supp.pdf' target="_blank" rel="noopener noreferrer">[Supplementary]</a></td>
 				<!-- <td width="125" style="font-size:14pt; text-align: center;"><a target="_blank" rel="noopener noreferrer" href=''>[Code]</a></td> -->
 				<td width="125" style="font-size:14pt; text-align: center;">[Code]</td>
 
