--- a/sinddm/index.html
+++ b/sinddm/index.html
@@ -782,7 +782,7 @@
 	<table align=center width=750px>
 		<center><h1 style="margin-top: 65px;">Paper</h1></center>
 		<tr>
-			<td><a href=""><img alt="" class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
+			<td><a href='resources/sinddm_paper.pdf' target="_blank" rel="noopener noreferrer"><img alt="" class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
 			<td><span style="font-size:14pt"><b>SinDDM: A Single Image Denoising Diffusion Model.</b><br>
 				Vladimir Kulikov, Shahar Yadin,  Matan Kleiner, Tomer Michaeli.</span>
 				<br>
