--- a/sinddm/index.html
+++ b/sinddm/index.html
@@ -82,11 +82,16 @@
 			</tr>
 		</table>
 		</table>
-			<table align=center width=400px style="margin-bottom:20px !important;">
+			<table align=center width=570px style="margin-bottom:20px !important;">
 				<tr>
-					<td align=center width=120px>
+					<td align=center width=100px>
 						<center>
 							<span style="font-size:24px"><a href='resources/sinddm_paper.pdf' target="_blank" rel="noopener noreferrer">[Paper]</a></span>
+						</center>
+					</td>
+					<td align=center width=200px>
+						<center>
+							<span style="font-size:24px"><a href='resources/sinddm_supp.pdf' target="_blank" rel="noopener noreferrer">[Supplementary]</a></span>
 						</center>
 					</td>
 					<td align=center width=250px>
@@ -98,21 +103,26 @@
 			</table>
 		</table>
 	</table>
-	<!-- <table align=center width=250px style="margin-bottom:20px !important;">
+	<!-- <table align=center width=420px style="margin-bottom:20px !important;">
 		<tr>
-			<td align=center width=120px>
+			<td align=center width=100px>
 				<center>
 					<span style="font-size:24px"><a href='resources/sinddm_paper.pdf' target="_blank" rel="noopener noreferrer">[Paper]</a></span>
 				</center>
 			</td>
-			<td align=center width=120px>
+			<td align=center width=200px>
+				<center>
+					<span style="font-size:24px"><a href='resources/sinddm_supp.pdf' target="_blank" rel="noopener noreferrer">[Supplementary]</a></span>
+				</center>
+			</td>
+			<td align=center width=100px>
 				<center>
 					<span style="font-size:24px"><a href='' target="_blank" rel="noopener noreferrer">[Code]</a></span><br>
 				</center>
 			</td>
 		</tr>
-	</table> -->
-</table>
+	</table>
+</table> -->
 	</center>
 
 
