--- a/sinddm/index.html
+++ b/sinddm/index.html
@@ -879,11 +879,11 @@
 			<td width=400px>
 				<left>
 					<center><h2>Acknowledgements</h2></center>
-					This webpage is inspired by the template that was originally made by <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> and
-					 <a href="http://richzhang.github.io/">Richard Zhang</a> for a <a href="http://richzhang.github.io/colorization/">colorful</a> ECCV project;
-					  the code for the original template can be found <a href="https://github.com/richzhang/webpage-template">here</a>.<br>
-					  A lot of features are taken from <a href="https://getbootstrap.com/">bootstrap</a>.<br>
-					  All fonts are taken from <a href="https://fontawesome.com/">font awesome.</a>
+					This webpage is inspired by the template that was originally made by <a target="_blank" rel="noopener noreferrer" href="http://web.mit.edu/phillipi/">Phillip Isola</a> and
+					 <a target="_blank" rel="noopener noreferrer" href="http://richzhang.github.io/">Richard Zhang</a> for a <a target="_blank" rel="noopener noreferrer" href="http://richzhang.github.io/colorization/">colorful</a> ECCV project;
+					  the code for the original template can be found <a target="_blank" rel="noopener noreferrer" href="https://github.com/richzhang/webpage-template">here</a>.<br>
+					  We thank <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/hilamanor/">Hila Manor</a> for the help with this website.<br>
+					  A lot of features are taken from <a target="_blank" rel="noopener noreferrer" href="https://getbootstrap.com/">bootstrap</a>. All fonts are taken from <a target="_blank" rel="noopener noreferrer" href="https://fontawesome.com/">font awesome.</a>
 				</left>
 			</td>
 		</tr>
