--- a/sinddm/index.html
+++ b/sinddm/index.html
@@ -721,7 +721,7 @@
 
 	<center><h1 style="margin-top: 65px;">Generation guided by image contents within ROIs</h1></center>
 	<p>SinDDM is able to generate images with user-prescribed contents within several
-		ROIs. The rest of the image is generated randomly but coherently around those constrains.</p>
+		ROIs. The rest of the image is generated randomly but coherently around those constraints.</p>
 
 	<center>
 		<table class="table" width="1">
