--- a/sinddm/index.html
+++ b/sinddm/index.html
@@ -796,8 +796,8 @@
 			<td><span style="font-size:14pt"><b>SinDDM: A Single Image Denoising Diffusion Model.</b><br>
 				Vladimir Kulikov, Shahar Yadin,  Matan Kleiner, Tomer Michaeli.</span>
 				<br>
-				<!-- <span style="font-size:14pt"><a href='' target="_blank" rel="noopener noreferrer">[Arxiv]</a></span> -->
-				<span style="font-size:14pt">[Arxiv]</span>
+				<span style="font-size:14pt"><a href='https://arxiv.org/abs/2211.16582' target="_blank" rel="noopener noreferrer">[Arxiv]</a></span>
+				<!-- <span style="font-size:14pt">[Arxiv]</span> -->
 				<span style="font-size:14pt"><a href='resources/sinddm_paper.pdf' target="_blank" rel="noopener noreferrer">[Paper]</a></span>
 				<!-- <span style="font-size:14pt"><a href="./resources/bibtex.txt">[Bibtex]</a> -->
 				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
@@ -806,7 +806,7 @@
 			</td>
 		</tr>
 	</table>
-	<!-- <p class="section">&nbsp;</p>
+	<p class="section">&nbsp;</p>
 	<p class="section" id="bibtex"><b>Bibtex</b></p>
 	<table border="0">
 	   <tbody>
@@ -823,13 +823,13 @@
 		@article{kulikov2022sinddm,
 			title      = {SinDDM: A Single Image Denoising Diffusion Model},
 			author     = {Kulikov, Vladimir and Yadin, Shahar and Kleiner, Matan and Michaeli, Tomer},
-			journal    = {arXiv preprint arXiv:?????},
+			journal    = {arXiv preprint arXiv:2211.16582},
 			year       = {2022}
 		}
 		 </pre>
 	   </tbody>
-	</table> -->
-	<p class="section">&nbsp;</p>
+	</table>
+	<!-- <p class="section">&nbsp;</p> -->
 	<center>
 		  <table class="table" width="1">
 			<tbody>
