--- a/sinddm/index.html
+++ b/sinddm/index.html
@@ -71,7 +71,7 @@
 				</tr>
 			</table>
 			</table>
-				<table align=center class="table" style="margin-bottom:20px !important; max-width:570px">
+				<table align=center class="table" style="margin-bottom:20px !important; max-width:400px">
 					<tr>
 						<td align=center width=100px>
 							<span style="font-size:24px"><a href='resources/sinddm_paper.pdf' target="_blank" rel="noopener noreferrer">[Paper]</a></span>
@@ -79,8 +79,8 @@
 						<td align=center width=200px>
 							<span style="font-size:24px"><a href='resources/sinddm_supp.pdf' target="_blank" rel="noopener noreferrer">[Supplementary]</a></span>
 						</td>
-						<td align=center width=250px>
-							<span style="font-size:24px">[Code] (Coming Soon)</span><br>
+						<td align=center width=100px>
+							<span style="font-size:24px"><a href="https://github.com/fallenshock/SinDDM" target="_blank" rel="noopener noreferrer">[Code]</a></span>
 						</td>
 					</tr>
 				</table>
@@ -738,8 +738,8 @@
 				<tr>
 					<td style="font-size:14pt; text-align: left; padding-right: 40px !important;">
 						More results, comparison to other methods and further discussion about our model can be found in the <a href="resources/sinddm_supp.pdf" target="_blank" rel="noopener noreferrer">supplementary material</a>.<br>
-						<!-- Our official code implementation can be found in the official SinDDM <a href="" target="_blank" rel="noopener noreferrer">github repository</a>. -->
-						Our official code implementation can be found in the official SinDDM github repository (coming soon).
+						Our official code implementation can be found in the official SinDDM <a href="https://github.com/fallenshock/SinDDM" target="_blank" rel="noopener noreferrer">github repository</a>.
+						<!-- Our official code implementation can be found in the official SinDDM github repository (coming soon). -->
 
 					</td>
 				</tr>
@@ -756,11 +756,10 @@
 							</a>
 						</td>
 						<td width="50%" style="text-align: center;">
-							<a href="" target="_blank" rel="noopener noreferrer">
+							<a href="https://github.com/fallenshock/SinDDM" target="_blank" rel="noopener noreferrer">
 								<img alt="" id="github_logo" class="round" width="100%" style="max-width:150px" src="./resources/github_logo.png"/>
 							</a>
 						</td>
-						<!-- <td><img alt="" id="github_logo" class="round" width="100%" src="./resources/github_logo.png"/></td> -->
 
 					</tr>
 					<tr>
@@ -768,9 +767,8 @@
 							<a href='resources/sinddm_supp.pdf' target="_blank" rel="noopener noreferrer">[Supplementary]</a>
 						</td>
 						<td style="font-size:14pt; text-align: center;">
-							<a target="_blank" rel="noopener noreferrer" href=''>[Code]</a>
+							<a target="_blank" rel="noopener noreferrer" href='https://github.com/fallenshock/SinDDM'>[Code]</a>
 						</td>
-						<!-- <td width="125" style="font-size:14pt; text-align: center;">[Code]</td> -->
 
 					</tr>
 				</tbody>
