talk from ICVD 2023

--- a/sinddm/index.html
+++ b/sinddm/index.html
@@ -106,7 +106,7 @@
 				</tr>
 				</tbody>
 			</table>
-				<h1>Abstract</h1>
+		<h1>Abstract</h1>
 		</center>
 		<p>
 			Denoising diffusion models (DDMs) have led to staggering performance leaps in image generation, editing and restoration. 
@@ -117,6 +117,10 @@
 			As we illustrate, SinDDM generates diverse high-quality samples, and is applicable in a wide array of tasks, including style transfer and harmonization.
 			Furthermore, it can be easily guided by external supervision. 
 			Particularly, we demonstrate text-guided generation from a single image using a pre-trained CLIP model. 
+		</p>
+		<center><h1>Talk</h1></center>
+		<p align="center">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/vKLZchVpT2E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		</p>
 
 		<!-- style -->
