--- a/sinddm/index.html
+++ b/sinddm/index.html
@@ -47,6 +47,7 @@
 		<!-- top -->
 		<center>
 			<h1 style="font-size:42px">SinDDM: A Single Image Denoising Diffusion Model</h1>
+			<h2 style="font-size:32px">ICML 2023</h2>
 			<table align=center class="table" style="max-width:800px; margin-bottom:0px !important;">
 				<tr>
 					<td align=center>
