--- a/sinddm/index.html
+++ b/sinddm/index.html
@@ -729,10 +729,11 @@
 					padding: 0;;">
 
 			@article{kulikov2022sinddm,
-				title      = {SinDDM: A Single Image Denoising Diffusion Model},
-				author     = {Kulikov, Vladimir and Yadin, Shahar and Kleiner, Matan and Michaeli, Tomer},
-				journal    = {arXiv preprint arXiv:2211.16582},
-				year       = {2022}
+				title        = {SinDDM: A Single Image Denoising Diffusion Model},
+				author       = {Kulikov, Vladimir and Yadin, Shahar and Kleiner, Matan and Michaeli, Tomer},
+				booktitle    = {International Conference on Machine Learning},
+				organization = {PMLR},
+				year		 = {2023}
 			}
 			</pre>
 		</tbody>
