--- a/sinddm/index.html
+++ b/sinddm/index.html
@@ -729,13 +729,14 @@
 					padding: 0;;">
 
 
-				@article{kulikov2022sinddm,
-					title        = {SinDDM: A Single Image Denoising Diffusion Model},
-					author       = {Kulikov, Vladimir and Yadin, Shahar and Kleiner, Matan and Michaeli, Tomer},
-					booktitle    = {International Conference on Machine Learning},
-					organization = {PMLR},
-					year         = {2023}
-				}
+					@inproceedings{kulikov2023sinddm,
+					  title={Sinddm: A single image denoising diffusion model},
+					  author={Kulikov, Vladimir and Yadin, Shahar and Kleiner, Matan and Michaeli, Tomer},
+					  booktitle={International Conference on Machine Learning},
+					  pages={17920--17930},
+					  year={2023},
+					  organization={PMLR}
+					}
 
 			</pre>
 		</tbody>
