--- a/sinddm/index.html
+++ b/sinddm/index.html
@@ -708,6 +708,7 @@
 				<td><span style="font-size:14pt"><b>SinDDM: A Single Image Denoising Diffusion Model.</b><br>
 					Vladimir Kulikov, Shahar Yadin,  Matan Kleiner, Tomer Michaeli.</span>
 					<br>
+					<span style="font-size:14pt"><a href='https://proceedings.mlr.press/v202/kulikov23a.html' target="_blank" rel="noopener noreferrer">[Proceeding]</a></span>
 					<span style="font-size:14pt"><a href='https://arxiv.org/abs/2211.16582' target="_blank" rel="noopener noreferrer">[Arxiv]</a></span>
 					<span style="font-size:14pt"><a href='resources/sinddm_paper.pdf' target="_blank" rel="noopener noreferrer">[Paper]</a></span>
 					</span>
