--- a/sinddm/index.html
+++ b/sinddm/index.html
@@ -7,6 +7,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="shortcut icon" type="image/x-icon" href="resources/icon.ico">
   	<link href="style.css" rel="stylesheet" type="text/css">
 	<meta property="og:image" content="Path to my teaser.png"/> 
 	<meta property="og:title" content="SinDDM: A Single Image Denoising Diffusion Model" />
