--- a/sinddm/index.html
+++ b/sinddm/index.html
@@ -82,6 +82,9 @@
 							<span style="font-size:24px"><a href='resources/sinddm_supp.pdf' target="_blank" rel="noopener noreferrer">[Supplementary]</a></span>
 						</td>
 						<td align=center width=100px>
+							<span style="font-size:24px"><a href="https://icml.cc/virtual/2023/poster/23700" target="_blank" rel="noopener noreferrer">[Proceedings]</a></span>
+						</td>
+						<td align=center width=100px>
 							<span style="font-size:24px"><a href="https://github.com/fallenshock/SinDDM" target="_blank" rel="noopener noreferrer">[Code]</a></span>
 						</td>
 					</tr>
