--- a/slicedit/index.html
+++ b/slicedit/index.html
@@ -752,11 +752,11 @@
 		<table border="0">
 		<tbody>
 			<pre class="command-copy"><div class="container"><div class="row"><div class="col" id="citation">
-@inproceedings{
+@article{
 	cohen2024slicedit,
 	title={Slicedit: Zero-Shot Video Editing With Text-to-Image Diffusion Models Using Spatio-Temporal Slices},
 	author={Cohen, Nathaniel and Kulikov, Vladimir and Kleiner, Matan and Huberman-Spiegelglas, Inbar and Michaeli, Tomer},
-	journal={arXiv preprint arXiv:XXXX},
+	journal={arXiv preprint arXiv:2405.12211},
 	year={2024},
 }
 		</div><div class="col text-end"><button type="button" class="btn btn-light" onclick="copyBib()" onmouseover="console.log('hover');"><i class="fa-regular fa-copy"></i></button></div></div></div></pre>
