--- a/slicedit/supp.html
+++ b/slicedit/supp.html
@@ -113,9 +113,9 @@
 						</div>
 					</div>
 					</center>
-					<center><p style="max-width: 1250px;" class="video-responsive">TokenFlow perform per frame inversion. In the second column we provide TokenFlow results with DDIM inversion per frame, whereas in the third column we provide TokenFlow results
+					<center><p style="max-width: 1250px;" class="video-responsive">TokenFlow performs per frame inversion. In the second column we provide TokenFlow results with DDIM inversion per frame, whereas in the third column we provide TokenFlow results
 						with DDPM inversion per frame. 
-						Slicedit perform inversion with the inflated denoiser over the whole volume. In the fourth column we provide Slicedit results with DDIM inversion over the whole volume, whereas 
+						Slicedit performs inversion with the inflated denoiser over the whole volume. In the fourth column we provide Slicedit results with DDIM inversion over the whole volume, whereas 
 						in the fifth column we provide Slicedit results with DDPM inversion over the whole volume.	
 					</p></center>
 				<br>
