--- a/slicedit/index.html
+++ b/slicedit/index.html
@@ -739,7 +739,7 @@
 				<div class="col-md-auto" style="padding: 1px;">
 					<p style="font-size:14pt; margin-top: 5px;"><strong>Slicedit: Zero-Shot Video Editing With Text-to-Image Diffusion Models Using Spatio-Temporal Slices</strong><br>
 						Nathaniel Cohen<sup>*</sup>, Vladimir Kulikov<sup>*</sup>, Matan Kleiner<sup>*</sup>, Inbar Huberman-Spiegelglas, Tomer Michaeli.<br>
-						<span><a class="btn btn-outline-primary" href='https://arxiv.org' role="button" style="font-size: 16px;" target="_blank" rel="noopener noreferrer"><i class="ai ai-arxiv"></i> Arxiv</a></span>
+						<span><a class="btn btn-outline-primary" href='https://arxiv.org/abs/2405.12211' role="button" style="font-size: 16px;" target="_blank" rel="noopener noreferrer"><i class="ai ai-arxiv"></i> Arxiv</a></span>
 						<span><a class="btn btn-outline-primary" href='resources/paper.pdf' role="button" style="font-size: 16px;"><i class="fas fa-file-pdf"></i> Paper</a></span>
 						<span><a class="btn btn-outline-primary" href='supp.html' role="button" style="font-size: 16px;" target="_blank" rel="noopener noreferrer"><i class="fas fa-file-video"></i> Supplementary</a></span>
 					</p>
