--- a/slicedit/index.html
+++ b/slicedit/index.html
@@ -77,12 +77,8 @@
 					<div class="col-md-auto">
 						<span><a class="btn btn-outline-primary" href='resources/paper.pdf' role="button" style="font-size: 24px;"><i class="fas fa-file-pdf"></i> Paper</a></span>
 					</div>
-					<!-- <div class="col-md-auto">
-						<span><a class="btn btn-outline-primary" href='sm.html' target="_blank" rel="noopener noreferrer" role="button" style="font-size: 24px;"><i class="fas fa-file-video"></i> Supplementary</a></span>
-					</div> -->
 					<div class="col-md-auto">
-						<!-- <span><a class="btn btn-outline-primary" href='https://github.com/' target="_blank" rel="noopener noreferrer" role="button" style="font-size: 24px;"><i class="fab fa-github"></i> Code - coming soon</a></span>-->
-						<span><a class="btn btn-outline-primary" role="button" href="" style="font-size: 24px;"><i class="fab fa-github"></i> Code - coming soon</a></span>
+						<span><a class="btn btn-outline-primary" role="button" href="https://github.com/fallenshock/Slicedit" style="font-size: 24px;"><i class="fab fa-github"></i> Code</a></span>
 					</div>
 				</div>
 			</div>
@@ -767,30 +763,29 @@
 		<div class="container">
 			<p class="text-left">
 				For further ablation study, see our <a href="supp.html" target="_blank" rel="noopener noreferrer">Supplementary Webpage</a>.<br>
-				Our official code implementation is coming soon. 
-			    <!-- can be found in the official <a href="https://github.com" target="_blank" rel="noopener noreferrer">github repository</a>. -->
+				Our official can be found in the official <a href="https://github.com/fallenshock/Slicedit" target="_blank" rel="noopener noreferrer">github repository</a>. 
 			</p>
 		</div>
 		
 
-		<!-- <center>
+		<center>
 			<table class="table" width="1" style="max-width: 400px;">
 				<tbody>
 					<tr>
 						<td width="50%" style="text-align: center;">
-							<a href="https://github.com" target="_blank" rel="noopener noreferrer">
+							<a href="https://github.com/fallenshock/Slicedit" target="_blank" rel="noopener noreferrer">
 								<img alt="" id="github_logo" class="round" width="100%" style="max-width:150px" src="./resources/github_logo.png"/>
 							</a>
 						</td>
 					</tr>
 					<tr>
 						<td style="font-size:14pt; text-align: center;">
-							<span><a class="btn btn-outline-primary" href='https://github.com' role="button" style="font-size: 16px;">Code</a></span>
+							<span><a class="btn btn-outline-primary" href='https://github.com/fallenshock/Slicedit' role="button" style="font-size: 16px;">Code</a></span>
 						</td>
 					</tr>
 				</tbody>
 			</table>
-		</center> -->
+		</center>
 
 
 		<hr>
