--- a/slicedit/index.html
+++ b/slicedit/index.html
@@ -110,7 +110,10 @@
 		</p>
 
 		<p style="font-size: 12pt;"><sup>#</sup>Slicedit can be pronounced ``slice-edit'' or ``sliced-it''<p>
-		<!-- end abstract and teaser image-->
+		
+		<img src="resources/observation.png", class="image-responsive"><br><br>
+		
+			<!-- end abstract and teaser image-->
 			
 		<center>
 			<h1 style="margin-top: 10px;">Overview</h1>
@@ -728,17 +731,33 @@
 			<center><h1 style="margin-top: 65px;">Paper</h1></center>
 			<div class="row justify-content-md-center">
 				<div class="col-md-auto" style="padding: 1px;">
-					<a href='resources/paper.pdf' target="_blank" rel="noopener noreferrer">
-						<img alt="" class="layered-paper" style="height:100%; max-height: 175px;" src="./resources/paper.png"/>
-					</a>
+					<center>
+						<p style="font-size:14pt; margin-top: 5px;"><strong>Slicedit: Zero-Shot Video Editing With Text-to-Image Diffusion Models Using Spatio-Temporal Slices</strong><br>
+							Nathaniel Cohen<sup>*</sup>, Vladimir Kulikov<sup>*</sup>, Matan Kleiner<sup>*</sup>, Inbar Huberman-Spiegelglas, Tomer Michaeli.<br>
+						</p>
+					</center>
 				</div>
-				<div class="col-md-auto" style="padding: 1px;">
-					<p style="font-size:14pt; margin-top: 5px;"><strong>Slicedit: Zero-Shot Video Editing With Text-to-Image Diffusion Models Using Spatio-Temporal Slices</strong><br>
-						Nathaniel Cohen<sup>*</sup>, Vladimir Kulikov<sup>*</sup>, Matan Kleiner<sup>*</sup>, Inbar Huberman-Spiegelglas, Tomer Michaeli.<br>
-						<span><a class="btn btn-outline-primary" href='https://arxiv.org/abs/2405.12211' role="button" style="font-size: 16px;" target="_blank" rel="noopener noreferrer"><i class="ai ai-arxiv"></i> Arxiv</a></span>
-						<span><a class="btn btn-outline-primary" href='resources/paper.pdf' role="button" style="font-size: 16px;"><i class="fas fa-file-pdf"></i> Paper</a></span>
-						<span><a class="btn btn-outline-primary" href='supp.html' role="button" style="font-size: 16px;" target="_blank" rel="noopener noreferrer"><i class="fas fa-file-video"></i> Supplementary</a></span>
-					</p>
+			</div>
+			<div class="row">
+				<div class="col-md d-flex justify-content-md-end justify-content-sm-center">
+					<center>
+						<a href="https://arxiv.org/abs/2405.12211" target="_blank" rel="noopener noreferrer">
+						<img alt="" class="layered-paper-big" style="height:100%; max-height: 175px;" src="./resources/paper.png"/>
+						</a>
+						<br><a href="https://arxiv.org/abs/2405.12211" role="button" class="btn btn-outline-primary btn-sm" target="_blank" rel="noopener noreferrer">
+							<i class="ai ai-arxiv"></i> Arxiv
+						</a>
+					</center>
+				</div>
+				<div class="col-md d-flex justify-content-md-start justify-content-sm-center">
+					<center>
+						<a href="https://github.com/fallenshock/Slicedit" target="_blank" rel="noopener noreferrer">
+							<img alt="" id="github_logo" class="round" widht="100%" style="max-height:205px" src="./resources/github_logo.png"/>
+						</a><br>
+						<a href="https://github.com/fallenshock/Slicedit" role="button" class="btn btn-outline-primary btn-sm" target="_blank" rel="noopener noreferrer">
+							<i class="fa fa-github" aria-hidden="true"></i> Code
+						</a>
+					</center>
 				</div>
 			</div>
 		</div>
@@ -766,27 +785,6 @@
 				Our official can be found in the official <a href="https://github.com/fallenshock/Slicedit" target="_blank" rel="noopener noreferrer">github repository</a>. 
 			</p>
 		</div>
-		
-
-		<center>
-			<table class="table" width="1" style="max-width: 400px;">
-				<tbody>
-					<tr>
-						<td width="50%" style="text-align: center;">
-							<a href="https://github.com/fallenshock/Slicedit" target="_blank" rel="noopener noreferrer">
-								<img alt="" id="github_logo" class="round" width="100%" style="max-width:150px" src="./resources/github_logo.png"/>
-							</a>
-						</td>
-					</tr>
-					<tr>
-						<td style="font-size:14pt; text-align: center;">
-							<span><a class="btn btn-outline-primary" href='https://github.com/fallenshock/Slicedit' role="button" style="font-size: 16px;">Code</a></span>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</center>
-
 
 		<hr>
 		<br>
