--- a/slicedit/index.html
+++ b/slicedit/index.html
@@ -766,15 +766,19 @@
 		<p class="section" id="bibtex"><b>Bibtex</b></p>
 		<table border="0">
 		<tbody>
-			<pre class="command-copy"><div class="container"><div class="row"><div class="col" id="citation">
-@article{
-	cohen2024slicedit,
-	title={Slicedit: Zero-Shot Video Editing With Text-to-Image Diffusion Models Using Spatio-Temporal Slices},
-	author={Cohen, Nathaniel and Kulikov, Vladimir and Kleiner, Matan and Huberman-Spiegelglas, Inbar and Michaeli, Tomer},
-	journal={arXiv preprint arXiv:2405.12211},
-	year={2024},
-}
-		</div><div class="col text-end"><button type="button" class="btn btn-light" onclick="copyBib()" onmouseover="console.log('hover');"><i class="fa-regular fa-copy"></i></button></div></div></div></pre>
+			<pre class="command-copy"><div class="container"><div class="row"><div class="col" id="citation">@InProceedings{cohen2024slicedit,
+	title = 	 {Slicedit: Zero-Shot Video Editing With Text-to-Image Diffusion Models Using Spatio-Temporal Slices},
+	author =       {Cohen, Nathaniel and Kulikov, Vladimir and Kleiner, Matan and Huberman-Spiegelglas, Inbar and Michaeli, Tomer},
+	booktitle = 	 {Proceedings of the 41st International Conference on Machine Learning},
+	pages = 	 {9109--9137},
+	year = 	 {2024},
+	editor = 	 {Salakhutdinov, Ruslan and Kolter, Zico and Heller, Katherine and Weller, Adrian and Oliver, Nuria and Scarlett, Jonathan and Berkenkamp, Felix},
+	volume = 	 {235},
+	series = 	 {Proceedings of Machine Learning Research},
+	month = 	 {21--27 Jul},
+	publisher =    {PMLR},
+	url = 	 {https://proceedings.mlr.press/v235/cohen24a.html},
+	}	</div><div class="col text-end"><button type="button" class="btn btn-light" onclick="copyBib()" onmouseover="console.log('hover');"><i class="fa-regular fa-copy"></i></button></div></div></div></pre>
 		</tbody>
 		</table>
 		<!-- end bibtex citation -->
