--- a/slicedit/index.html
+++ b/slicedit/index.html
@@ -75,10 +75,10 @@
 			<div class="container">
 				<div class="row justify-content-md-center">
 					<div class="col-md-auto">
-						<span><a class="btn btn-outline-primary" href='resources/paper.pdf' role="button" style="font-size: 24px;"><i class="fas fa-file-pdf"></i> Paper</a></span>
+						<span><a class="btn btn-outline-primary" href='https://proceedings.mlr.press/v235/cohen24a.html' role="button" style="font-size: 24px;" target="_blank"><i class="fas fa-file-pdf"></i> Proceedings</a></span>
 					</div>
 					<div class="col-md-auto">
-						<span><a class="btn btn-outline-primary" role="button" href="https://github.com/fallenshock/Slicedit" style="font-size: 24px;"><i class="fab fa-github"></i> Code</a></span>
+						<span><a class="btn btn-outline-primary" role="button" href="https://github.com/fallenshock/Slicedit" style="font-size: 24px;" target="_blank"><i class="fab fa-github"></i> Code</a></span>
 					</div>
 				</div>
 			</div>
@@ -744,9 +744,11 @@
 						<a href="https://arxiv.org/abs/2405.12211" target="_blank" rel="noopener noreferrer">
 						<img alt="" class="layered-paper-big" style="height:100%; max-height: 175px;" src="./resources/paper.png"/>
 						</a>
-						<br><a href="https://arxiv.org/abs/2405.12211" role="button" class="btn btn-outline-primary btn-sm" target="_blank" rel="noopener noreferrer">
-							<i class="ai ai-arxiv"></i> Arxiv
-						</a>
+						<br>
+						<a href="https://arxiv.org/abs/2405.12211" role="button" class="btn btn-outline-primary btn-sm" target="_blank" rel="noopener noreferrer">
+							<i class="ai ai-arxiv"></i> Arxiv</a>
+							<a href="https://proceedings.mlr.press/v235/cohen24a.html" role="button" class="btn btn-outline-primary btn-sm" target="_blank" rel="noopener noreferrer">
+								<i class="fas fa-file-pdf"></i> Proceedings</a>
 					</center>
 				</div>
 				<div class="col-md d-flex justify-content-md-start justify-content-sm-center">
