update broken paper link

--- a/slicedit/index.html
+++ b/slicedit/index.html
@@ -129,7 +129,7 @@
 			version with extended attention is applied to <b><em>x - y</em></b> slices (blue), and the original denoiser is applied to <b><em>y - t</em></b> slices (red).
 			The two predicted noise volumes are then combined into the final predicted noise volume (marked in green).
 			<img src="resources/overview.png", class="image-responsive"><br><br>
-			See our <a href="resources/paper.pdf" target="_blank" rel="noopener noreferrer">paper</a> for more details.
+			See our <a href="https://proceedings.mlr.press/v235/cohen24a.html" target="_blank" rel="noopener noreferrer">paper</a> for more details.
 		</p>		
 
 		<!-- Examples -->
