--- a/flowedit/index.html
+++ b/flowedit/index.html
@@ -631,7 +631,7 @@
 			<pre class="command-copy"><div class="container"><div class="row"><div class="col" id="citation">@article{kulikov2024flowedit,
 	title = 	 {FlowEdit: Inversion-Free Text-Based Editing Using Pre-Trained Flow Models},
 	author =       {Kulikov, Vladimir and Kleiner, Matan and Huberman-Spiegelglas, Inbar and Michaeli, Tomer},
-	journal={arXiv preprint arXiv:},
+	journal={arXiv preprint arXiv:2412.08629},
 	year={2024}
 	}	</div><div class="col text-end"><button type="button" class="btn btn-light" onclick="copyBib()" onmouseover="console.log('hover');"><i class="fa-regular fa-copy"></i></button></div></div></div></pre>
 		</tbody>
