--- a/flowedit/index.html
+++ b/flowedit/index.html
@@ -71,7 +71,7 @@
 			<div class="container">
 				<div class="row justify-content-md-center">
 					<div class="col-md-auto">
-						<span><a class="btn btn-outline-primary" href='' role="button" style="font-size: 24px;" target="_blank"><i class="ai ai-arxiv"></i> Arxiv</a></span>
+						<span><a class="btn btn-outline-primary" href='https://arxiv.org/abs/2412.08629' role="button" style="font-size: 24px;" target="_blank"><i class="ai ai-arxiv"></i> Arxiv</a></span>
 					</div>
 					<div class="col-md-auto">
 						<span><a class="btn btn-outline-primary" role="button" href="https://github.com/fallenshock/FlowEdit" style="font-size: 24px;" target="_blank"><i class="fab fa-github"></i> Code</a></span>
@@ -607,7 +607,7 @@
 						<img alt="" class="layered-paper-big" style="height:100%; max-height: 175px;" src="./resources/paper.png"/>
 						</a>
 						<br>
-						<a href="" role="button" class="btn btn-outline-primary btn-sm" target="_blank" rel="noopener noreferrer">
+						<a href="https://arxiv.org/abs/2412.08629" role="button" class="btn btn-outline-primary btn-sm" target="_blank" rel="noopener noreferrer">
 							<i class="ai ai-arxiv"></i> Arxiv</a>
 					</center>
 				</div>
@@ -629,10 +629,10 @@
 		<table border="0">
 		<tbody>
 			<pre class="command-copy"><div class="container"><div class="row"><div class="col" id="citation">@article{kulikov2024flowedit,
-	title = 	 {FlowEdit: Inversion-Free Text-Based Editing Using Pre-Trained Flow Models},
-	author =       {Kulikov, Vladimir and Kleiner, Matan and Huberman-Spiegelglas, Inbar and Michaeli, Tomer},
-	journal={arXiv preprint arXiv:2412.08629},
-	year={2024}
+	title = {FlowEdit: Inversion-Free Text-Based Editing Using Pre-Trained Flow Models},
+	author = {Kulikov, Vladimir and Kleiner, Matan and Huberman-Spiegelglas, Inbar and Michaeli, Tomer},
+	journal = {arXiv preprint arXiv:2412.08629},
+	year = {2024}
 	}	</div><div class="col text-end"><button type="button" class="btn btn-light" onclick="copyBib()" onmouseover="console.log('hover');"><i class="fa-regular fa-copy"></i></button></div></div></div></pre>
 		</tbody>
 		</table>
