--- a/flowedit/index.html
+++ b/flowedit/index.html
@@ -603,7 +603,7 @@
 			<div class="row">
 				<div class="col-md d-flex justify-content-md-end justify-content-sm-center">
 					<center>
-						<a href="" target="_blank" rel="noopener noreferrer">
+						<a href="https://arxiv.org/abs/2412.08629" target="_blank" rel="noopener noreferrer">
 						<img alt="" class="layered-paper-big" style="height:100%; max-height: 175px;" src="./resources/paper.png"/>
 						</a>
 						<br>
@@ -613,10 +613,10 @@
 				</div>
 				<div class="col-md d-flex justify-content-md-start justify-content-sm-center">
 					<center>
-						<a href="" target="_blank" rel="noopener noreferrer">
+						<a href="https://github.com/fallenshock/FlowEdit" target="_blank" rel="noopener noreferrer">
 							<img alt="" id="github_logo" class="round" widht="100%" style="max-height:205px" src="./resources/github_logo.png"/>
 						</a><br>
-						<a href="" role="button" class="btn btn-outline-primary btn-sm" target="_blank" rel="noopener noreferrer">
+						<a href="https://github.com/fallenshock/FlowEdit" role="button" class="btn btn-outline-primary btn-sm" target="_blank" rel="noopener noreferrer">
 							<i class="fa fa-github" aria-hidden="true"></i> Code
 						</a>
 					</center>
