add comfyui links

--- a/flowedit/index.html
+++ b/flowedit/index.html
@@ -81,6 +81,12 @@
                             🤗 Space
                         </a>
                     </div>
+					<div class="col-md-auto">
+                        <a href="#comfy" style="font-size:24px" class="btn btn-outline-primary" role="button"  rel="noopener noreferrer">
+							<img src="resources/comfyui-color.svg" alt="Logo" style="width: 27px; height: 27px; margin-right: 0px;">
+                            ComfyUI
+                        </a>
+                    </div>
 				</div>
 			</div>
 		</center>
@@ -641,9 +647,23 @@
 		<div class="container">
 			<p class="text-left">
 				Our official code can be found in the official <a href="https://github.com/fallenshock/FlowEdit" target="_blank" rel="noopener noreferrer">github repository</a>. 
+			</p>	
+		</div>
+
+		
+		<!-- <id="comfy"> -->
+		<div class="container" id="comfy">
+			<p class="text-left">
+				<img src="resources/comfyui-color.svg" alt="Logo" style="width: 27px; height: 27px; margin-right: 0px;">
+				ComfyUI implementation for <a href="https://github.com/logtd/ComfyUI-Fluxtapoz" target="_blank" rel="noopener noreferrer">FLUX</a>, 
+				<a href="https://github.com/logtd/ComfyUI-LTXTricks" target="_blank" rel="noopener noreferrer">LTX Video</a> and 
+				<a href="https://github.com/logtd/ComfyUI-HunyuanLoom" target="_blank" rel="noopener noreferrer">HunyuanLoom</a>,
+				 implemented by <a href="https://x.com/logtdx/status/1869095838016012462?s=48&t=6Yj6BZKooDOmH_JWRWjtHg" target="_blank" rel="noopener noreferrer">logtd</a>.
 			</p>
 		</div>
 
+
+		
 		<hr>
 		<br>
 
