--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Matan Kleiner</title>
   
   <link rel="icon" type="image/x-icon" href="./favicon.ico" />
-  <link rel="icon"  href="assets/icons8-shutter-lineal-32.png">    
+  <link rel="icon" type="image/png" href="assets/icon.png">    
   <link rel="manifest" href="/site.webmanifest">
   
   <link rel="stylesheet" href="style.css">
