--- a/index.html
+++ b/index.html
@@ -101,6 +101,39 @@
   
         <div class="container" style="max-width: 1000px;">
 
+
+            <div class="card mb-3 shadow" id="FlowEdit">
+                <div class="card-body">
+                    <div class="row open-sans-300">
+                        <div class="col"><h5 class="card-title">FlowEdit: Inversion-Free Text-Based Editing Using Pre-Trained Flow Models</h5></div>
+                        <div class="col-auto">
+                            <a href="https://matankleiner.github.io/flowedit/"><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></a>
+                            &nbsp;
+                            <a href="https://github.com/fallenshock/FlowEdit"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+			                 &nbsp;
+                             <a href="https://huggingface.co/spaces/fallenshock/FlowEdit" style="text-decoration: none;">🤗</a>
+			                 &nbsp;
+                            <span class="badge bg-primary">ICCV 2025</span>
+                        </div>
+                    </div>
+                    <h6 class="card-subtitle mb-2 text-muted">
+                        <a href="https://www.linkedin.com/in/vladimir-kulikov/" target="_blank" rel="noopener noreferrer" class="text-muted">Vladimir Kulikov</a>,
+                        <b>Matan Kleiner</b>,
+                        <a href="https://inbarhub.github.io/www/" target="_blank" rel="noopener noreferrer" class="text-muted">Inbar Huberman-Spiegelglas</a>,
+                        <a href="https://tomer.net.technion.ac.il/" target="_blank" class="text-muted">Tomer Michaeli</a></h6>
+                            <p class="card-text">
+                                We introduce FlowEdit, a text-based editing method for pre-trained T2I flow models, which is inversion-free, optimization-free and 
+                                model agnostic. Our method constructs an ODE that directly maps between the source and target distributions (corresponding to the source 
+                                and target text prompts) and achieves a lower transport cost than the inversion approach. This leads to state-of-the-art results, as we 
+                                illustrate with Stable Diffusion 3 and FLUX.
+                    </p>
+                </div>
+                <div class="row">
+                    <img src="assets/FlowEdit.png" class="card-img-bottom" style="padding-left: 7rem; padding-right: 7rem;" alt="">
+                </div>
+            </div>
+
+
             <div class="card mb-3 shadow anchor" id="Coherence Aware">
                 <div class="card-body">
                     <div class="row open-sans-300">
@@ -131,38 +164,6 @@
                 </div>
                 <div class="row">
                     <img src="assets/CohAware.png" class="card-img-bottom" style="padding-left: 7rem; padding-right: 7rem; padding-bottom: 1rem;" alt="">
-                </div>
-            </div>
-
-
-            <div class="card mb-3 shadow" id="FlowEdit">
-                <div class="card-body">
-                    <div class="row open-sans-300">
-                        <div class="col"><h5 class="card-title">FlowEdit: Inversion-Free Text-Based Editing Using Pre-Trained Flow Models</h5></div>
-                        <div class="col-auto">
-                            <a href="https://matankleiner.github.io/flowedit/"><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></a>
-                            &nbsp;
-                            <a href="https://github.com/fallenshock/FlowEdit"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
-			                 &nbsp;
-                             <a href="https://huggingface.co/spaces/fallenshock/FlowEdit" style="text-decoration: none;">🤗</a>
-			                 &nbsp;
-                            <span class="badge bg-primary"></span>
-                        </div>
-                    </div>
-                    <h6 class="card-subtitle mb-2 text-muted">
-                        <a href="https://www.linkedin.com/in/vladimir-kulikov/" target="_blank" rel="noopener noreferrer" class="text-muted">Vladimir Kulikov</a>,
-                        <b>Matan Kleiner</b>,
-                        <a href="https://inbarhub.github.io/www/" target="_blank" rel="noopener noreferrer" class="text-muted">Inbar Huberman-Spiegelglas</a>,
-                        <a href="https://tomer.net.technion.ac.il/" target="_blank" class="text-muted">Tomer Michaeli</a></h6>
-                            <p class="card-text">
-                                We introduce FlowEdit, a text-based editing method for pre-trained T2I flow models, which is inversion-free, optimization-free and 
-                                model agnostic. Our method constructs an ODE that directly maps between the source and target distributions (corresponding to the source 
-                                and target text prompts) and achieves a lower transport cost than the inversion approach. This leads to state-of-the-art results, as we 
-                                illustrate with Stable Diffusion 3 and FLUX.
-                    </p>
-                </div>
-                <div class="row">
-                    <img src="assets/FlowEdit.png" class="card-img-bottom" style="padding-left: 7rem; padding-right: 7rem;" alt="">
                 </div>
             </div>
 
