--- a/flowedit/index.html
+++ b/flowedit/index.html
@@ -295,23 +295,23 @@
 									</div>
 									<div class="col" style="padding-right: 0px; padding-left: 0px; flex-shrink: 0;">	
 											<h5 class="title-responsive">SDEdit 0.4</h5>
-											<img src="resources/comparison/sdedit_sd3_cvpr.png" ,="" class="image-responsive-car">
+											<img src="resources/comparison/sdedit_sd3_cafe.png" ,="" class="image-responsive-car">
 									</div>
 									<div class="col" style="padding-right: 0px; padding-left: 0px; flex-shrink: 0;">	
 											<h5 class="title-responsive">ODE Inv.</h5>
-											<img src="resources/comparison/ode_sd3_cvpr.png" ,="" class="image-responsive-car">
+											<img src="resources/comparison/ode_sd3_cafe.png" ,="" class="image-responsive-car">
 									</div>
 									<div class="col" style="padding-right: 0px; padding-left: 0px; flex-shrink: 0;">	
 										<h5 class="title-responsive">iRFDS [1]</h5>
-										<img src="resources/comparison/irfds_cvpr.png" ,="" class="image-responsive-car">
+										<img src="resources/comparison/irfds_cafe.png" ,="" class="image-responsive-car">
 									</div>
 									<div class="col" style="padding-right: 10px; padding-left: 0px; flex-shrink: 0;">	
 										<h5 class="title-responsive"><b>FlowEdit</b></h5>
-										<img src="resources/comparison/cvpr_sd3_ours.png" ,="" class="image-responsive-car">
+										<img src="resources/comparison/cafe_sd3_ours.png" ,="" class="image-responsive-car">
 									</div>
 								</div>
 									<div class="row justify-content-md-center">
-											<p class="p1"> A gas station with a CAFE sign → A gas station with a <span style="color:red; font-weight:bold">CVPR</span> sign</p>
+											<p class="p1"> A gas station with a CAFE sign → A gas station with a <span style="color:red; font-weight:bold">FREE</span> sign</p>
 									</div>
 							</div>	
 							<div class="carousel-item" >
@@ -453,23 +453,27 @@
 										</div>
 										<div class="col" style="padding-right: 0px; padding-left: 0px; flex-shrink: 0;">	
 												<h5 class="title-responsive">SDEdit 0.75</h5>
-												<img src="resources/comparison/sdedit_flux_cvpr.png" ,="" class="image-responsive-car">
+												<img src="resources/comparison/sdedit_flux_cafe.png" ,="" class="image-responsive-car">
 										</div>
 										<div class="col" style="padding-right: 0px; padding-left: 0px; flex-shrink: 0;">	
 												<h5 class="title-responsive">ODE Inv.</h5>
-												<img src="resources/comparison/ode_flux_cvpr.png" ,="" class="image-responsive-car">
+												<img src="resources/comparison/ode_flux_cafe.png" ,="" class="image-responsive-car">
 										</div>
 										<div class="col" style="padding-right: 0px; padding-left: 0px; flex-shrink: 0;">	
 											<h5 class="title-responsive">RF Inv. [2]</h5>
-											<img src="resources/comparison/rf_inv_cvpr.png" ,="" class="image-responsive-car">
+											<img src="resources/comparison/rf_inv_cafe.png" ,="" class="image-responsive-car">
+										</div>
+										<div class="col" style="padding-right: 0px; padding-left: 0px; flex-shrink: 0;">	
+											<h5 class="title-responsive">RF Edit [3]</h5>
+											<img src="resources/comparison/rf_edit_cafe.png" ,="" class="image-responsive-car">
 										</div>
 										<div class="col" style="padding-right: 10px; padding-left: 0px; flex-shrink: 0;">	
 											<h5 class="title-responsive"><b>FlowEdit</b></h5>
-											<img src="resources/comparison/cvpr_ours_flux.png" ,="" class="image-responsive-car">
+											<img src="resources/comparison/cafe_ours_flux.png" ,="" class="image-responsive-car">
 										</div>
 									</div>
 										<div class="row justify-content-md-center">
-												<p class="p1"> A gas station with a CAFE sign → A gas station with a <span style="color:red; font-weight:bold">CVPR</span> sign</p>
+												<p class="p1"> A gas station with a CAFE sign → A gas station with a <span style="color:red; font-weight:bold">FREE</span> sign</p>
 										</div>
 								</div>	
 								<div class="carousel-item" >
@@ -489,6 +493,10 @@
 										<div class="col" style="padding-right: 0px; padding-left: 0px; flex-shrink: 0;">	
 											<h5 class="title-responsive">RF Inv. [2]</h5>
 											<img src="resources/comparison/rf_inv_lion.png" ,="" class="image-responsive-car">
+										</div>
+										<div class="col" style="padding-right: 0px; padding-left: 0px; flex-shrink: 0;">	
+											<h5 class="title-responsive">RF Edit [3]</h5>
+											<img src="resources/comparison/rf_edit_lion.png" ,="" class="image-responsive-car">
 										</div>
 										<div class="col" style="padding-right: 10px; padding-left: 0px; flex-shrink: 0;">	
 											<h5 class="title-responsive"><b>FlowEdit</b></h5>
@@ -517,6 +525,10 @@
 											<h5 class="title-responsive">RF Inv. [2]</h5>
 											<img src="resources/comparison/rf_inv_big_ben.png" ,="" class="image-responsive-car">
 										</div>
+										<div class="col" style="padding-right: 0px; padding-left: 0px; flex-shrink: 0;">	
+											<h5 class="title-responsive">RF Edit [3]</h5>
+											<img src="resources/comparison/rf_edit_big_ben.png" ,="" class="image-responsive-car">
+										</div>
 										<div class="col" style="padding-right: 10px; padding-left: 0px; flex-shrink: 0;">	
 											<h5 class="title-responsive"><b>FlowEdit</b></h5>
 											<img src="resources/comparison/big_ben_ours_flux.png" ,="" class="image-responsive-car">
@@ -544,6 +556,10 @@
 											<h5 class="title-responsive">RF Inv. [2]</h5>
 											<img src="resources/comparison/rf_inv_pigeon.png" ,="" class="image-responsive-car">
 										</div>
+										<div class="col" style="padding-right: 0px; padding-left: 0px; flex-shrink: 0;">	
+											<h5 class="title-responsive">RF Edit [3]</h5>
+											<img src="resources/comparison/rf_edit_pigeon.png" ,="" class="image-responsive-car">
+										</div>
 										<div class="col" style="padding-right: 10px; padding-left: 0px; flex-shrink: 0;">	
 											<h5 class="title-responsive"><b>FlowEdit</b></h5>
 											<img src="resources/comparison/pigeon_ours_flux.png" ,="" class="image-responsive-car">
@@ -570,6 +586,10 @@
 										<div class="col" style="padding-right: 0px; padding-left: 0px; flex-shrink: 0;">	
 											<h5 class="title-responsive">RF Inv. [2]</h5>
 											<img src="resources/comparison/rf_inv_cake.png" ,="" class="image-responsive-car">
+										</div>
+										<div class="col" style="padding-right: 0px; padding-left: 0px; flex-shrink: 0;">	
+											<h5 class="title-responsive">RF Edit [3]</h5>
+											<img src="resources/comparison/rf_edit_cake.png" ,="" class="image-responsive-car">
 										</div>
 										<div class="col" style="padding-right: 10px; padding-left: 0px; flex-shrink: 0;">	
 											<h5 class="title-responsive"><b>FlowEdit</b></h5>
@@ -670,8 +690,9 @@
 		<!-- References -->
 		<h3>References</h3>
 		<p>
-			[1] Xiaofeng Yang, Cheng Chen, Xulei Yang, Fayao Liu and Guosheng Lin. "Text-to-Image Rectified Flow as Plug-and-Play Priors."<br>
-			[2] Litu Rout, Yujia Chen, Nataniel Ruiz, Constantine Caramanis, Sanjay Shakkottai and Wen-Sheng Chu. "Semantic Image Inversion and Editing using Stochastic Rectified Differential Equations."<br>
+			[1] Xiaofeng Yang, Cheng Chen, Xulei Yang, Fayao Liu and Guosheng Lin. "Text-to-Image Rectified Flow as Plug-and-Play Priors." ICLR 2025<br>
+			[2] Litu Rout, Yujia Chen, Nataniel Ruiz, Constantine Caramanis, Sanjay Shakkottai and Wen-Sheng Chu. "Semantic Image Inversion and Editing using Stochastic Rectified Differential Equations." ICLR 2025<br>
+			[2] Jiangshan Wang, Pu Junfu, Qi Zhongang, Guo Jiayi, Ma Yue, Huang Nisha, Chen Yuxin, Li Xiu and Shan Ying. "Taming Rectified Flow for Inversion and Editing." ICML 2025.<br>
 		</p>
 		<hr>
 		<!-- acknowledgement -->
